<resources>
    <string name="app_name">Send All</string>
    <string name="title_activity_connections">Connections</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- for gallery fragment -->
    <string name="string_videos">Videos</string>
    <string name="string_audios">Audios</string>
    <string name="string_images">Images</string>
    <string name="string_apk">Applications</string>
    <string name="string_other">Other files</string>

    <!-- Strings related to Settings -->
    <string name="string_turn_on_receiver">Turn on receiving</string>
    <string name="str_storage_location">Storage location</string>

    <!-- Default Thumbnail description -->
    <string name="default_thumbnail_desc">Thumbnail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pesonal_interaction_view">Connection</string>
    <string name="title_activity_settings">Settings</string>

    <!-- First things dialogue -->
    <string name="first_things_dia_title">First things first..</string>
    <string name="first_things_dia_desc">Please fill in the following..</string>
    <string name="first_things_yourname">Type a username</string>
    <string name="first_things_cancel">Close App</string>
    <string name="first_things_proceed">Proceed</string>

    <!-- Connector Activity -->
    <string name="create_grp_btn_description">Create</string>
    <string name="join_grp_btn_description">Join</string>

    <!-- Create new folder dialog -->
    <string name="string_type_name_for_new_dir">New directory name</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="home_settings_img_desc">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="save_txt">Save</string>
    <string name="create_txt">Create</string>
    <string name="cancel_txt">Cancel</string>
    <string name="newfoldername_txt">New directory name</string>
    <string name="username_txt">Username</string>
    <string name="string_select">Select</string>
    <string name="string_go_back">Go back</string>
    <string name="string_create_new">Create new</string>
    <string name="string_directory">Directory</string>
</resources>
