<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin">

    <TextView
        android:text="@string/newfoldername_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/txt_new_thing_name_caption"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/colorDarkGrey" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@id/txt_new_thing_name_caption"
        android:layout_marginTop="12dp"
        android:id="@+id/edttxt_new_thing_name"
        android:hint="@string/string_type_name_for_new_dir"
        android:textColor="@color/colorBlack"
        android:textAppearance="@android:style/TextAppearance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edttxt_new_thing_name">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_txt"
            android:layout_weight="1"
            android:id="@+id/btn_cancel"
            style="?attr/borderlessButtonStyle"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_txt"
            android:layout_weight="1"
            android:id="@+id/btn_create"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>