<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:id="@+id/action_bar"
    android:baselineAligned="false"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitCenter"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:contentDescription="@string/string_images" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:textStyle="bold|italic"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="end">

        <Switch
            android:id="@+id/action_bar_nw_state_switch"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/appbar_padding_top"
            android:layout_marginEnd="@dimen/appbar_padding_top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:id="@+id/settings_img_btn"
            android:layout_marginStart="@dimen/appbar_padding_top"
            android:layout_marginEnd="@dimen/appbar_padding_top"
            android:contentDescription="@string/home_settings_img_desc" />
    </LinearLayout>

</LinearLayout>